# firebase_flutter

./: BUILD.gn  pubspec.yaml  readme.md
lib/: firebase.mojom.dart
mojom/: firebase.mojom
package/: CHANGELOG.md  README.md  pubspec.yaml
package/lib/: ServiceDefinitions.json  flutter_services.yaml
package/lib/ios/: libFirebase.dylib
src/: Firebase  firebase_impl.h  firebase_impl.mm  main.cc
